removed weird line of code ... which prevent dev launcher to start